# stock_analysis

./: Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
src/stock_analysis/: __init__.py  cmdline.py  constants.py  log.py
src/stock_analysis/config/: __init__.py  settings.yml
src/stock_analysis/fetch/: getOverrallStatistics.py  getProfitRatio.py  getSectorStatistics.py
tests/: __init__.py  test_cmdline.py  test_getStatistics.py  test_log.py  test_market.py  test_version.py
