[tool.poetry]
name = "stock_analysis"
version = "0.1.0"
description = "Chinese stock statistics analysis"
readme = "README.md"
authors = ["ppone <wangyh96321@gmail.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.12"
click = "^8.1.3"
akshare = "^1.14.31"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
stock_analysis = "stock_analysis.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120
